fix(stepper): update stepper gap in vertical

--- a/tegel/src/components/stepper/sdds-stepper.scss
+++ b/tegel/src/components/stepper/sdds-stepper.scss
@@ -7,7 +7,7 @@
       height: 100%;
       flex-direction: column;
       justify-content: unset;
-      gap: 48px;
+      gap: 52px;
     }
 
     &.vertical.sm {
